fix: fix bug for pool
