# controller/order_utxo_controller.go
@@ -19,7 +19,7 @@ import (
 // @Router /brc20/utxo/colddown [post]
 func ColdDownUtxo(c *gin.Context) {
 	var (
-		t   int64            = tool.MakeTimestamp()
+		t            int64 = tool.MakeTimestamp()
 		requestModel *request.ColdDownUtxo
 	)
 	if c.ShouldBindJSON(&requestModel) == nil {
@@ -43,7 +43,7 @@ func ColdDownUtxo(c *gin.Context) {
 // @Router /brc20/transfer/colddown [post]
 func ColdDownBrc20Transfer(c *gin.Context) {
 	var (
-		t   int64            = tool.MakeTimestamp()
+		t            int64 = tool.MakeTimestamp()
 		requestModel *request.ColdDownBrcTransfer
 	)
 	if c.ShouldBindJSON(&requestModel) == nil {
@@ -58,7 +58,6 @@ func ColdDownBrc20Transfer(c *gin.Context) {
 	c.JSONP(http.StatusInternalServerError, respond.RespErr(errors.New("error parameter"), tool.MakeTimestamp()-t, respond.HttpsCodeError))
 }
 
-
 // @Summary Cold down the brc20 transfer batch
 // @Description Cold down the brc20 transfer batch
 // @Produce  json
@@ -68,7 +67,7 @@ func ColdDownBrc20Transfer(c *gin.Context) {
 // @Router /brc20/transfer/colddown/batch [post]
 func ColdDownBrc20TransferBatch(c *gin.Context) {
 	var (
-		t   int64            = tool.MakeTimestamp()
+		t            int64 = tool.MakeTimestamp()
 		requestModel *request.ColdDownBrcTransferBatch
 	)
 	if c.ShouldBindJSON(&requestModel) == nil {
@@ -92,11 +91,35 @@ func ColdDownBrc20TransferBatch(c *gin.Context) {
 // @Router /brc20/transfer/colddown/batch/ask [post]
 func ColdDownBatchBrc20TransferAndMakeAsk(c *gin.Context) {
 	var (
-		t   int64            = tool.MakeTimestamp()
+		t            int64 = tool.MakeTimestamp()
 		requestModel *request.ColdDownBrcTransferBatch
 	)
 	if c.ShouldBindJSON(&requestModel) == nil {
 		responseModel, err := order_brc20_service.ColdDownBatchBrc20TransferAndMakeAsk(requestModel)
+		if err != nil {
+			c.JSONP(http.StatusOK, respond.RespErr(err, tool.MakeTimestamp()-t, respond.HttpsCodeError))
+			return
+		}
+		c.JSONP(http.StatusOK, respond.RespSuccess(responseModel, tool.MakeTimestamp()-t))
+		return
+	}
+	c.JSONP(http.StatusInternalServerError, respond.RespErr(errors.New("error parameter"), tool.MakeTimestamp()-t, respond.HttpsCodeError))
+}
+
+// @Summary Cold down the brc20 transfer batch
+// @Description Cold down the brc20 transfer batch
+// @Produce  json
+// @Param Request body request.ColdDownBrcTransferBatch true "Request"
+// @Tags System
+// @Success 200 {object} respond.Brc20TransferCommitBatchResp ""
+// @Router /brc20/transfer/colddown/batch/pool [post]
+func ColdDownBatchBrc20TransferAndMakePool(c *gin.Context) {
+	var (
+		t            int64 = tool.MakeTimestamp()
+		requestModel *request.ColdDownBrcTransferBatch
+	)
+	if c.ShouldBindJSON(&requestModel) == nil {
+		responseModel, err := order_brc20_service.ColdDownBatchBrc20TransferAndMakePool(requestModel)
 		if err != nil {
 			c.JSONP(http.StatusOK, respond.RespErr(err, tool.MakeTimestamp()-t, respond.HttpsCodeError))
 			return
